--- a/INTITA/Welcome/Base.lproj/Welcome.storyboard
+++ b/INTITA/Welcome/Base.lproj/Welcome.storyboard
@@ -2,9 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,18 +15,87 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
+                                <rect key="frame" x="316" y="60" width="88" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="qGR-cW-JhG"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="Skip">
+                                    <color key="titleColor" name="mainColor"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uca-Of-E2p">
+                                <rect key="frame" x="140" y="772" width="140" height="40"/>
+                                <color key="backgroundColor" name="mainColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="dEi-4k-F5p"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <state key="normal" title="START /&gt;">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PROGRAM THE FUTURE  " textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCo-XY-WyK">
+                                <rect key="frame" x="70" y="150" width="280" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="KhS-0d-rrV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <color key="textColor" name="mainColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ge6-SB-pzY">
+                                <rect key="frame" x="140" y="196" width="140" height="4"/>
+                                <color key="backgroundColor" name="mainColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="4" id="xdO-3B-3HJ"/>
+                                </constraints>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="xoe-4b-d9A">
+                                <rect key="frame" x="16" y="60" width="84" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ymd-Nq-HAz"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="opaqueSeparatorColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uca-Of-E2p" secondAttribute="bottom" constant="50" id="2Pi-gk-fQt"/>
+                            <constraint firstItem="ge6-SB-pzY" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.3333" id="2he-tO-jop"/>
+                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="leading" secondItem="xoe-4b-d9A" secondAttribute="trailing" constant="216" id="3Xr-EW-VpF"/>
+                            <constraint firstItem="JCo-XY-WyK" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.6666" id="4nb-cp-XXm"/>
+                            <constraint firstItem="ge6-SB-pzY" firstAttribute="top" secondItem="JCo-XY-WyK" secondAttribute="bottom" constant="16" id="D7h-sG-eRn"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="KqR-vV-exA"/>
+                            <constraint firstItem="uca-Of-E2p" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.3333" id="O5O-5q-GRN"/>
+                            <constraint firstItem="ge6-SB-pzY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UUX-ci-IPF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ahv-DJ-VZD" secondAttribute="trailing" constant="16" id="gxg-Y9-kKo"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="juX-BL-scj"/>
+                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.2" id="kLv-Kr-v5i"/>
+                            <constraint firstItem="uca-Of-E2p" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="mrT-RY-q80"/>
+                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ody-wK-Hd7"/>
+                            <constraint firstItem="JCo-XY-WyK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="106" id="qXR-jl-a7y"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="vf5-fR-11f"/>
+                            <constraint firstItem="JCo-XY-WyK" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="xES-O7-yuU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="line" destination="ge6-SB-pzY" id="h2F-07-mqx"/>
+                        <outlet property="mottoLabel" destination="JCo-XY-WyK" id="sTx-FI-Z3E"/>
+                        <outlet property="startBtn" destination="uca-Of-E2p" id="TTc-r6-Hyx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="52"/>
+            <point key="canvasLocation" x="137.68115942028987" y="51.5625"/>
         </scene>
     </scenes>
     <resources>
-        <systemColor name="opaqueSeparatorColor">
-            <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="logo" width="76" height="23"/>
+        <namedColor name="mainColor">
+            <color red="0.29411764709999999" green="0.45882352939999999" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
