--- a/INTITA/Welcome/Base.lproj/Welcome.storyboard
+++ b/INTITA/Welcome/Base.lproj/Welcome.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
-                                <rect key="frame" x="316" y="60" width="88" height="30"/>
+                                <rect key="frame" x="315" y="60" width="83" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="qGR-cW-JhG"/>
                                 </constraints>
@@ -25,9 +25,12 @@
                                 <state key="normal" title="Skip">
                                     <color key="titleColor" name="mainColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uca-Of-E2p">
-                                <rect key="frame" x="140" y="772" width="140" height="40"/>
+                                <rect key="frame" x="138" y="772" width="138" height="40"/>
                                 <color key="backgroundColor" name="mainColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="dEi-4k-F5p"/>
@@ -41,7 +44,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PROGRAM THE FUTURE  " textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCo-XY-WyK">
-                                <rect key="frame" x="70" y="150" width="280" height="30"/>
+                                <rect key="frame" x="69" y="150" width="276" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="KhS-0d-rrV"/>
                                 </constraints>
@@ -50,14 +53,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ge6-SB-pzY">
-                                <rect key="frame" x="140" y="196" width="140" height="4"/>
+                                <rect key="frame" x="138" y="196" width="138" height="4"/>
                                 <color key="backgroundColor" name="mainColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="4" id="xdO-3B-3HJ"/>
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="xoe-4b-d9A">
-                                <rect key="frame" x="16" y="60" width="84" height="30"/>
+                                <rect key="frame" x="16" y="60" width="83" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="ymd-Nq-HAz"/>
                                 </constraints>
@@ -68,7 +71,6 @@
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uca-Of-E2p" secondAttribute="bottom" constant="50" id="2Pi-gk-fQt"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.3333" id="2he-tO-jop"/>
-                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="leading" secondItem="xoe-4b-d9A" secondAttribute="trailing" constant="216" id="3Xr-EW-VpF"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.6666" id="4nb-cp-XXm"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="top" secondItem="JCo-XY-WyK" secondAttribute="bottom" constant="16" id="D7h-sG-eRn"/>
                             <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="KqR-vV-exA"/>
@@ -99,7 +101,7 @@
     <resources>
         <image name="logo" width="76" height="23"/>
         <namedColor name="mainColor">
-            <color red="0.29411764709999999" green="0.45882352939999999" blue="0.64313725489999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
