renamed ForgotPasswordCoordinator.swift, ForgotPassword.storyboard, ForgotPasswordViewController.swift

--- a/INTITA/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/ForgotPassword/ForgotPassword.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Invalid View Controller-->
+        <!--Forgot Password View Controller-->
         <scene sceneID="E5Z-X9-TrH">
             <objects>
-                <viewController storyboardIdentifier="InvalidViewController" id="XyY-Qt-gEz" customClass="InvalidViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ForgotPasswordViewController" id="XyY-Qt-gEz" customClass="ForgotPasswordViewController" customModule="INTITA" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gwN-Y1-aDq">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
