--- a/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
@@ -118,7 +118,7 @@
                         <outlet property="blueLineView" destination="wBV-Vl-pen" id="Ka5-ql-ASx"/>
                         <outlet property="emailTextField" destination="Kps-id-amD" id="9zq-Vl-yJ5"/>
                         <outlet property="explanationTextLabel" destination="met-Sw-jWv" id="hdH-GZ-2FC"/>
-                        <outlet property="invalidTxtLabel" destination="jJX-OU-6cg" id="NRa-Yk-WpJ"/>
+                        <outlet property="invalidTextLabel" destination="jJX-OU-6cg" id="NRa-Yk-WpJ"/>
                         <outlet property="logoImageView" destination="4zl-Fq-C9l" id="P5C-J9-ZWC"/>
                         <outlet property="recoveryLabel" destination="T3r-QB-7BL" id="ErP-Pn-KkL"/>
                         <outlet property="sendButton" destination="QVc-1t-BPw" id="vXp-L3-yrm"/>
