--- a/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
+++ b/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
@@ -16,19 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
-                                <rect key="frame" x="300" y="60" width="98" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="qGR-cW-JhG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="SKIP ">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uca-Of-E2p">
                                 <rect key="frame" x="24" y="783" width="366" height="55"/>
                                 <color key="backgroundColor" name="mainColor"/>
@@ -62,10 +49,11 @@
                                 </constraints>
                             </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="xoe-4b-d9A">
-                                <rect key="frame" x="24" y="108" width="366" height="93"/>
+                                <rect key="frame" x="43.5" y="108" width="327" height="93"/>
                                 <color key="backgroundColor" name="mainColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="93" id="8zh-D2-H4G"/>
+                                    <constraint firstAttribute="width" secondItem="xoe-4b-d9A" secondAttribute="height" multiplier="327:93" id="gkx-ys-I29"/>
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSf-tu-YFB" customClass="UIPageControlStackView" customModule="INTITA" customModuleProvider="target">
@@ -82,6 +70,21 @@
                                     <userDefinedRuntimeAttribute type="image" keyPath="otherPagesImage" value="pageControlOtherPage"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBU-m6-0IH">
+                                <rect key="frame" x="322" y="60" width="30" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="4nR-5b-zeK"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
+                                <rect key="frame" x="271" y="50" width="52" height="24"/>
+                                <state key="normal" title="SKIP ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -89,22 +92,25 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="uca-Of-E2p" secondAttribute="bottom" constant="24" id="2Pi-gk-fQt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JCo-XY-WyK" secondAttribute="trailing" constant="24" id="8be-Tc-Jrs"/>
                             <constraint firstItem="uca-Of-E2p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="8ga-3K-Yw4"/>
+                            <constraint firstItem="ZBU-m6-0IH" firstAttribute="leading" secondItem="ahv-DJ-VZD" secondAttribute="trailing" id="A3m-xj-8XI"/>
                             <constraint firstItem="JSf-tu-YFB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="B3V-e4-hUd"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xoe-4b-d9A" secondAttribute="trailing" constant="24" id="D7H-vT-gOg"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="top" secondItem="JCo-XY-WyK" secondAttribute="bottom" constant="30" id="D7h-sG-eRn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uca-Of-E2p" secondAttribute="trailing" constant="24" id="DFn-7D-Jsn"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZBU-m6-0IH" secondAttribute="trailing" constant="24" id="HVL-1d-Kz3"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="KYs-95-qgv"/>
+                            <constraint firstItem="ZBU-m6-0IH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="Tcm-x1-kOt"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UUX-ci-IPF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ahv-DJ-VZD" secondAttribute="trailing" constant="16" id="gxg-Y9-kKo"/>
-                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="300" id="jb6-Lu-wTR"/>
+                            <constraint firstItem="ahv-DJ-VZD" firstAttribute="height" secondItem="ZBU-m6-0IH" secondAttribute="height" id="bHy-ZH-JmQ"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hvV-tc-Mwc"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ahv-DJ-VZD" secondAttribute="bottom" constant="24" id="k9R-Vp-bYu"/>
                             <constraint firstItem="ahv-DJ-VZD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ody-wK-Hd7"/>
                             <constraint firstItem="uca-Of-E2p" firstAttribute="top" secondItem="JSf-tu-YFB" secondAttribute="bottom" constant="24" id="p8U-Kj-B9B"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="top" secondItem="xoe-4b-d9A" secondAttribute="bottom" constant="35" id="qXR-jl-a7y"/>
-                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="64" id="sc6-gu-H48"/>
-                            <constraint firstItem="xoe-4b-d9A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="vf5-fR-11f"/>
+                            <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ZBU-m6-0IH" secondAttribute="bottom" constant="24" id="xct-q9-11O"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="arrowImg" destination="ZBU-m6-0IH" id="dtz-gW-jE2"/>
                         <outlet property="line" destination="ge6-SB-pzY" id="h2F-07-mqx"/>
                         <outlet property="logo" destination="xoe-4b-d9A" id="QJp-Ra-STh"/>
                         <outlet property="mottoLabel" destination="JCo-XY-WyK" id="sTx-FI-Z3E"/>
@@ -115,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="51.5625"/>
+            <point key="canvasLocation" x="131.8840579710145" y="-54.241071428571423"/>
         </scene>
     </scenes>
     <resources>
