1. Custom Page Controll changed on UIPageControl. 2. Approved by designer new fonts added

--- a/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
+++ b/INTITA/Modules/Welcome/Base.lproj/Welcome.storyboard
@@ -16,6 +16,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
+                                <rect key="frame" x="271" y="50" width="52" height="24"/>
+                                <state key="normal" title="SKIP ">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uca-Of-E2p">
                                 <rect key="frame" x="24" y="783" width="366" height="55"/>
                                 <color key="backgroundColor" name="mainColor"/>
@@ -56,35 +65,15 @@
                                     <constraint firstAttribute="width" secondItem="xoe-4b-d9A" secondAttribute="height" multiplier="327:93" id="gkx-ys-I29"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JSf-tu-YFB" customClass="UIPageControlStackView" customModule="INTITA" customModuleProvider="target">
-                                <rect key="frame" x="87" y="734" width="240" height="25"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="A1b-bS-yUI"/>
-                                    <constraint firstAttribute="width" constant="240" id="bTf-tm-2Nf"/>
-                                </constraints>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="numberOfPages">
-                                        <integer key="value" value="7"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="currentPageImage" value="pageControlCurrentPage"/>
-                                    <userDefinedRuntimeAttribute type="image" keyPath="otherPagesImage" value="pageControlOtherPage"/>
-                                </userDefinedRuntimeAttributes>
-                            </view>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZBU-m6-0IH">
                                 <rect key="frame" x="322" y="60" width="30" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="4nR-5b-zeK"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahv-DJ-VZD">
-                                <rect key="frame" x="271" y="50" width="52" height="24"/>
-                                <state key="normal" title="SKIP ">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="goToLogInBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FQb-LY-jhm"/>
-                                </connections>
-                            </button>
+                            <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="7" translatesAutoresizingMaskIntoConstraints="NO" id="Q0w-Jm-HYf">
+                                <rect key="frame" x="28" y="731" width="366" height="28"/>
+                            </pageControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -93,7 +82,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JCo-XY-WyK" secondAttribute="trailing" constant="24" id="8be-Tc-Jrs"/>
                             <constraint firstItem="uca-Of-E2p" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="8ga-3K-Yw4"/>
                             <constraint firstItem="ZBU-m6-0IH" firstAttribute="leading" secondItem="ahv-DJ-VZD" secondAttribute="trailing" id="A3m-xj-8XI"/>
-                            <constraint firstItem="JSf-tu-YFB" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="B3V-e4-hUd"/>
+                            <constraint firstItem="Q0w-Jm-HYf" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" constant="4" id="B3V-e4-hUd"/>
                             <constraint firstItem="ge6-SB-pzY" firstAttribute="top" secondItem="JCo-XY-WyK" secondAttribute="bottom" constant="30" id="D7h-sG-eRn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uca-Of-E2p" secondAttribute="trailing" constant="24" id="DFn-7D-Jsn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZBU-m6-0IH" secondAttribute="trailing" constant="24" id="HVL-1d-Kz3"/>
@@ -104,7 +93,7 @@
                             <constraint firstItem="xoe-4b-d9A" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="hvV-tc-Mwc"/>
                             <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ahv-DJ-VZD" secondAttribute="bottom" constant="24" id="k9R-Vp-bYu"/>
                             <constraint firstItem="ahv-DJ-VZD" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="ody-wK-Hd7"/>
-                            <constraint firstItem="uca-Of-E2p" firstAttribute="top" secondItem="JSf-tu-YFB" secondAttribute="bottom" constant="24" id="p8U-Kj-B9B"/>
+                            <constraint firstItem="uca-Of-E2p" firstAttribute="top" secondItem="Q0w-Jm-HYf" secondAttribute="bottom" constant="24" id="p8U-Kj-B9B"/>
                             <constraint firstItem="JCo-XY-WyK" firstAttribute="top" secondItem="xoe-4b-d9A" secondAttribute="bottom" constant="35" id="qXR-jl-a7y"/>
                             <constraint firstItem="xoe-4b-d9A" firstAttribute="top" secondItem="ZBU-m6-0IH" secondAttribute="bottom" constant="24" id="xct-q9-11O"/>
                         </constraints>
@@ -114,8 +103,8 @@
                         <outlet property="line" destination="ge6-SB-pzY" id="h2F-07-mqx"/>
                         <outlet property="logo" destination="xoe-4b-d9A" id="QJp-Ra-STh"/>
                         <outlet property="mottoLabel" destination="JCo-XY-WyK" id="sTx-FI-Z3E"/>
+                        <outlet property="pageControl" destination="Q0w-Jm-HYf" id="3JR-r9-jbj"/>
                         <outlet property="skipBtn" destination="ahv-DJ-VZD" id="ole-J4-FV0"/>
-                        <outlet property="stackViewPageControl" destination="JSf-tu-YFB" id="vpe-tl-CyZ"/>
                         <outlet property="startBtn" destination="uca-Of-E2p" id="TTc-r6-Hyx"/>
                     </connections>
                 </viewController>
@@ -126,8 +115,6 @@
     </scenes>
     <resources>
         <image name="logo" width="327" height="93"/>
-        <image name="pageControlCurrentPage" width="33.5" height="32"/>
-        <image name="pageControlOtherPage" width="33.5" height="32.5"/>
         <namedColor name="mainColor">
             <color red="0.29399999976158142" green="0.45899999141693115" blue="0.64300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
